navigation on Mobile was fixed on top:0;

--- a/style.css
+++ b/style.css
@@ -834,7 +834,7 @@ h2 em {
 
   .nav__list {
     position: fixed;
-    top: 68px;
+    top: 0;
     left: 0;
     right: 0;
     background-color: rgba(245, 243, 239, 0.97);
